[gd_scene load_steps=6 format=3 uid="uid://combat_player_001"]

[ext_resource type="Script" path="res://scenes/entities/combat_player.gd" id="1"]
[ext_resource type="Resource" path="res://data/combat_stats/player_stats.tres" id="2"]
[ext_resource type="Script" path="res://scripts/combat/stats_component.gd" id="3"]
[ext_resource type="Script" path="res://scripts/combat/state_machine.gd" id="4"]
[ext_resource type="Script" path="res://scripts/combat/combat_component.gd" id="5"]
[ext_resource type="Script" path="res://scripts/combat/ability_controller.gd" id="6"]
[ext_resource type="Script" path="res://scripts/combat/hitbox_area3d.gd" id="7"]
[ext_resource type="Script" path="res://scripts/combat/hurtbox_area3d.gd" id="8"]
[ext_resource type="Script" path="res://scripts/combat/abilities/melee_attack.gd" id="9"]
[ext_resource type="Script" path="res://scripts/combat/abilities/fireball.gd" id="10"]
[ext_resource type="Script" path="res://scripts/systems/inventory.gd" id="11"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.5
height = 2.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.5
height = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_1"]
radius = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_2"]
radius = 1.0

[node name="CombatPlayer" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 1
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_1")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("3")
stats = ExtResource("2")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("5")

[node name="AbilityController" type="Node" parent="CombatComponent"]
script = ExtResource("6")

[node name="MeleeAttack" type="Node" parent="CombatComponent/AbilityController"]
script = ExtResource("9")

[node name="Fireball" type="Node" parent="CombatComponent/AbilityController"]
script = ExtResource("10")

[node name="HitboxArea3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 32
monitoring = false
script = ExtResource("7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxArea3D"]
shape = SubResource("SphereShape3D_1")

[node name="HurtboxArea3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 32
script = ExtResource("8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtboxArea3D"]
shape = SubResource("SphereShape3D_2")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("11")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 5)
